--- a/index.html
+++ b/index.html
@@ -92,19 +92,9 @@
             background: #475569;
         }
     </style>
-<script type="importmap">
-{
-  "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.38.0",
-    "recharts": "https://esm.sh/recharts@^3.7.0"
-  }
-}
-</script>
 </head>
 <body class="bg-navy-50 text-navy-950 font-sans">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
